fix safari alignment

--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -173,6 +173,7 @@
 .collection-filters__sort {
   font-size: 1.4rem;
   height: auto;
+  margin: 0;
   padding-left: 0;
   padding-right: 1.75rem;
 }
